phase 2: changed the outputPath in ApplicationContext